--- a/css/styles.css
+++ b/css/styles.css
@@ -516,6 +516,10 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     border-radius: 4px; 
 }
 
+.form_button_logo {
+    margin-left: 16px; 
+}
+
 /*------------------------------portfolio-------------------------------*/
 
 /*------------------------------Header-------------------------------*/
