--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
 }
 
 .form_input_text {
-    /*display: flex;*/
+    display: flex;
     gap: 24px;
 }
 
