--- a/css/styles.css
+++ b/css/styles.css
@@ -482,8 +482,8 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
 }
 
 .form_input_tab {
-    display: flex;
-    gap: 24px;
+    /*display: flex;
+    gap: 24px;*/
 }
 
 .email_text {
