--- a/css/styles.css
+++ b/css/styles.css
@@ -829,6 +829,60 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     padding: 72px 24px 24px 24px;
 }
 
+.backdrop_paragraph {
+    font-weight: 500;
+    font-size: 16px; 
+    line-height: 1.5; 
+    text-align: center;
+    letter-spacing: 0.02em; 
+    color: var(--navyblue);
+    margin-bottom: 16px;
+}
+
+.backdrop_section {
+    margin-bottom: 8px;
+}
+
+.form_name {
+    font-size: 12px; 
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--grey);
+    display: block;
+    margin-bottom: 4px; 
+}
+
+.form_logo_input {
+    position: relative; 
+}
+
+.form_input_user {
+    width: 100%; 
+    height: 40px
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px; 
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form_input_user:hover {
+    border-color: #4D5AE5;
+}
+
+.form_logo_user {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.form_logo_user:focus {
+    fill: #4D5AE5;
+}
+
 .button_modal {
     position: absolute;
     top: 24px; 
