--- a/css/styles.css
+++ b/css/styles.css
@@ -858,7 +858,7 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
 
 .form_input_user {
     width: 100%; 
-    height: 40px
+    height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4); 
     border-radius: 4px;
     background-color: transparent;
