--- a/css/styles.css
+++ b/css/styles.css
@@ -867,9 +867,8 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form_input_user:focus {
+.form_input_user:focus .form_logo_user {
     border-color: #4D5AE5;
-    fill: #4D5AE5;
 }
 
 .form_logo_user {
@@ -880,7 +879,8 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.form_logo_user:focus {
+.form_logo_user {
+    fill: #4D5AE5;
 }
 
 .button_modal {
