--- a/css/styles.css
+++ b/css/styles.css
@@ -879,8 +879,12 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.form_logo_user {
+.fillcolor_user {
     fill: #4D5AE5;
+}
+
+.form_logo_number {
+
 }
 
 .button_modal {
