--- a/css/styles.css
+++ b/css/styles.css
@@ -867,7 +867,7 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form_input_user:focus {
+.form_input_user:focus, .form_logo_user {
     border-color: #4D5AE5;
 }
 
