--- a/css/styles.css
+++ b/css/styles.css
@@ -883,7 +883,31 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.form_logo_number {
+.form_text_input {
+    margin-bottom: 16px;
+}
+
+.text_input_user {
+    width: 100%; 
+    height: 120px; 
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px; 
+    background-color: transparent;
+    outline: transparent;
+    resize: none; 
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.text_input_user:hover {
+    border-color: #4D5AE5;
+}
+
+.form_button_input {
+    margin-bottom: 24px; 
 }
 
 .button_modal {
