--- a/css/styles.css
+++ b/css/styles.css
@@ -911,6 +911,35 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     margin-bottom: 24px; 
 }
 
+.user-privacy {  
+}
+
+.user-privacy-text {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--grey);
+}
+
+.user-privacy-policy {
+    width: 16px;
+    height: 16px; 
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius: 2px;
+    transition: background-color 250ms 
+    cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex; 
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
+.privacy-policy-vector {
+    
+}
+
 .button_modal {
     position: absolute;
     top: 24px; 
