--- a/css/styles.css
+++ b/css/styles.css
@@ -914,7 +914,7 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
 .user-privacy {  
 }
 
-input[type="checkbox"]:checked + label {
+input[type="checkbox"]:checked + label .user-privacy-policy {
     background-color: var(--blue);
 }
 
@@ -923,6 +923,7 @@ input[type="checkbox"]:checked + label {
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--grey);
+    display: block;
 }
 
 .user-privacy-policy {
