--- a/css/styles.css
+++ b/css/styles.css
@@ -925,7 +925,7 @@ input[type="checkbox"]:checked + label .user-privacy-policy {
 }
 
 .user-button-input {
-    display: block;
+    display: block; 
     min-width: 169px;
     height: 56px;
     font-family: "Roboto", sans-serif;
@@ -940,6 +940,26 @@ input[type="checkbox"]:checked + label .user-privacy-policy {
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin: 0 auto;  
+}
+
+.user-button-input::before, .user-button-input::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background: #12058a;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+}
+
+.user-button-input:hover {
+    color: #12058a;
+}
+
+.user-button-input:hover::before {
+    transform: scaleX(1);
 }
 
 .user-privacy-text {
