--- a/css/styles.css
+++ b/css/styles.css
@@ -587,7 +587,7 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     color: var(--navyblue);
     padding: 24px 0;
     position: relative; 
-    color: #404bbf; 
+    /* color: #404bbf;  */
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -599,6 +599,7 @@ rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     height: 4px;
     background-color: #404bbf; 
     border-radius: 2px;
+    width: 100%;
 }
 
 .title-adress {
