--- a/css/styles.css
+++ b/css/styles.css
@@ -592,16 +592,25 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.title-list-link::after {
+.title-list-link.current:after {
     content: "";
     position: absolute;
     left: 0;
+    opacity: 0;
     bottom: -1px;
     height: 4px;
     background-color: #404bbf; 
     border-radius: 2px;
     width: 100%;
 }
+
+.title-list-link:hover:after, 
+.title-list-link:focus:after, 
+.title-list-link.current:after {
+    opacity: 1;
+}
+
+
 
 .title-adress {
     font-style: normal;
