--- a/css/styles.css
+++ b/css/styles.css
@@ -592,7 +592,7 @@ body {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.title-list-link.current:after {
+.title-list-link:after {
     content: "";
     position: absolute;
     left: 0;
