--- a/css/styles.css
+++ b/css/styles.css
@@ -596,18 +596,21 @@ body {
     content: "";
     position: absolute;
     left: 0;
-    opacity: 0;
+    /* opacity: 0; */
+    transform: scale(0);
     bottom: -1px;
     height: 4px;
     background-color: #404bbf; 
     border-radius: 2px;
     width: 100%;
+    transition: transform 200ms linear;
 }
 
 .title-list-link:hover:after, 
 .title-list-link:focus:after, 
 .title-list-link.current:after {
-    opacity: 1;
+    /* opacity: 1; */
+    transform: scale(1);
 }
 
 
